--- a/index.njk
+++ b/index.njk
@@ -1,14 +1,13 @@
 ---
-title: Title. Update me.
+title: COMM 230W Blog
 layout: layouts/home.njk
-description: Description. Update me.
+description: Blog assignment page for skill assignment 5.
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
 date: Last Modified
 ---
 
 <p>
-  This is a demo website based on 
-  <a href="https://www.industrialempathy.com/posts/eleventy-high-performance-blog/">eleventy-high-performance-blog</a>.
+  This is my COMM320W blog site for skill assignment 5!
 </p>
 
 <div id="posts">
