--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- See _data/csp.js for how to add to the CSP. 
-    Update me: Remove comment if you want a CSP.
+    me: Remove comment if you want a CSP.
     <meta http-equiv="Content-Security-Policy" content="{{ csp.regular | safe }}">
     -->
     {% if isdevelopment %}
